--- a/AV-Solutions/uniad-trt/inference_app/enqueueV3/CMakeLists.txt
+++ b/AV-Solutions/uniad-trt/inference_app/enqueueV3/CMakeLists.txt
@@ -26,8 +26,8 @@ endif()
 
 set(TENSORRT_INCLUDE_DIRS ${TENSORRT_PATH}/include/)
 set(TENSORRT_LIBRARY_DIRS ${TENSORRT_PATH}/lib/)
-set(STB_LIB_PTH ../../../common/dependencies/stb/)
-set(CUOSD_LIB_PTH ../../../common/dependencies/cuOSD/)
+set(STB_LIB_PTH ../dependencies/stb/)
+set(CUOSD_LIB_PTH ../dependencies/cuOSD/)
 set(CUDA_TOOLKIT_ROOT_DIR /usr/local/cuda)
 set(CUDA_INCLUDE_DIRS ${CUDA_TOOLKIT_ROOT_DIR}/include)
 set(CUDA_LIBRARY_DIRS ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
